--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,8 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 project.image = images/
 
+# Spring Security Configuration
+logging.level.org.springframework.security = DEBUG
+spring.security.user.name = suyog
+spring.security.user.password = Pass@123
+spring.security.user.roles = ADMIN
